实现index页面和showDesign页面设计图片显示
1.修改index.php增加了图片路径常量
2.在数据库中添加12条作品记录
3.查找出作品记录，并包装成数组，显示出作品的图片

--- a/Home/View/Index/index.html
+++ b/Home/View/Index/index.html
@@ -152,6 +152,10 @@
 			height: 328px;
 			border-left: 1px solid rgba(204, 204, 204, 0.7);
 		}
+		.design_sample img{
+			width: 220px;
+			height:330px;
+		}
 		.design_sample .love_count{
 			display: none;
 			position: absolute;
@@ -280,19 +284,19 @@
 				<div class="float_title"></div>
 			</div>
 			<div class="design_sample" >
-				<!-- <a href=""><img src="{$smarty.const.IMAGE_URL}clothesimage/105.jpg"></a> -->
+				<a href=""><img src="{$key[0]['design_show_img']}"></a> 
 				<div class="love_count"></div>
 			</div>
 			<div class="design_sample">
-				<!-- <a href=""><img src="{$smarty.const.IMAGE_URL}clothesimage/106.jpg"></a> -->
+				<a href=""><img src="{$key[1]['design_show_img']}"></a> 
 				<div class="love_count"></div>
 			</div>	
 			<div class="design_sample">
-				<!-- <a href=""><img src="{$smarty.const.IMAGE_URL}clothesimage/107.jpg"></a> -->
+				<a href=""><img src="{$key[2]['design_show_img']}"></a> 
 				<div class="love_count"></div>
 			</div>
 			<div class="design_sample">
-				<!-- <a href=""><img src="{$smarty.const.IMAGE_URL}clothesimage/108.jpg"></a> -->
+				<a href=""><img src="{$key[3]['design_show_img']}"></a> 
 				<div class="love_count"></div>
 			</div>
 		</div>							
