实现作品详情页及数据库优化
1.实现作品详情页的前端及后台
2.将图片目录更名，挑选并新增12张中图和大图
3.优化数据库，精简部分数据库中字段名太长问题
4.添加12条作品记录，并实现其他关联表的数据添加
5.清空了缓存

--- a/Home/View/Index/index.html
+++ b/Home/View/Index/index.html
@@ -284,19 +284,27 @@
 				<div class="float_title"></div>
 			</div>
 			<div class="design_sample" >
-				<a href=""><img src="{$key[0]['design_show_img']}"></a> 
+				<a href="{$smarty.const.__MODULE__}/Common/details?id={$key[0]['id']}">
+					<img src="{$key[0]['show_img']}">
+				</a> 
 				<div class="love_count"></div>
 			</div>
 			<div class="design_sample">
-				<a href=""><img src="{$key[1]['design_show_img']}"></a> 
+				<a href="{$smarty.const.__MODULE__}/Common/details?id={$key[1]['id']}">
+					<img src="{$key[1]['show_img']}">
+					</a> 
 				<div class="love_count"></div>
 			</div>	
 			<div class="design_sample">
-				<a href=""><img src="{$key[2]['design_show_img']}"></a> 
+				<a href="{$smarty.const.__MODULE__}/Common/details?id={$key[2]['id']}">
+					<img src="{$key[2]['show_img']}">
+				</a> 
 				<div class="love_count"></div>
 			</div>
 			<div class="design_sample">
-				<a href=""><img src="{$key[3]['design_show_img']}"></a> 
+				<a href="{$smarty.const.__MODULE__}/Common/details?id={$key[3]['id']}">
+					<img src="{$key[3]['show_img']}">
+				</a> 
 				<div class="love_count"></div>
 			</div>
 		</div>							
