--- a/Home/View/Index/showDesign.html
+++ b/Home/View/Index/showDesign.html
@@ -205,18 +205,27 @@
 	{foreach $secondfloor as $key}	
 	<div class="secondfloor">
 		<div class="sample_design">
-			<a href=""><img src="{$key[0]['design_show_img']}"></a>
+			<a href="{$smarty.const.__MODULE__}/Common/details?id={$key[0]['id']}">
+				<img src="{$key[0]['show_img']}">
+			</a>
 			<div class="love_count"></div>
-		</div>		<div class="sample_design">
-			<a href=""><img src="{$key[1]['design_show_img']}"></a>
+		</div>		
+		<div class="sample_design">
+			<a href="{$smarty.const.__MODULE__}/Common/details?id={$key[1]['id']}">
+				<img src="{$key[1]['show_img']}">
+			</a>
 			<div class="love_count"></div>
 		</div>
 		<div class="sample_design">
-			<a href=""><img src="{$key[2]['design_show_img']}"></a>
+			<a href="{$smarty.const.__MODULE__}/Common/details?id={$key[2]['id']}">
+				<img src="{$key[2]['show_img']}">
+			</a>
 			<div class="love_count"></div>
 		</div>
 		<div class="sample_design">
-			<a href=""><img src="{$key[3]['design_show_img']}"></a>
+			<a href="{$smarty.const.__MODULE__}/Common/details?id={$key[3]['id']}">
+				<img src="{$key[3]['show_img']}">
+			</a>
 			<div class="love_count"></div>
 		</div>
 	</div>
