实现作品分类页界面及首页的分类标签完善
1.实现作品分类页界面，并实现获取标签的功能及js效果
2.实现index首页的标签获取功能，优化更多风格的界面
3.完善数据库风格表zxy_design_cate_style，增加29条风格标签

--- a/Home/View/Common/bottom.html
+++ b/Home/View/Common/bottom.html
@@ -8,13 +8,34 @@
 			height: 200px;
 			width: 100%;
 			margin-top:40px; 
-			border-top: 1px solid rgba(204, 204, 204, 0.7);
+			/*background: #fff;*/
+			border-top: 1px solid rgba(204, 204, 204, 0.3);
 			box-shadow: 2px 2px 15px rgba(204, 204, 204, 0.35);		
+		}
+		.b_btn{
+			margin: 0px auto;
+			height: 200px;
+			width: 1080px;
+			/*border: 1px solid black;*/
+
+		}
+		.b_btn li{
+			float: left;
+			width: 269px;
+			height: 150px;
+			list-style: none;
+			border-right: 1px solid rgba(204, 204, 204, 0.7);
 		}
 	</style>
 </head>
 <body>
 	<div class="bottom">	
+		<div class="b_btn">			
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+		</div>
 	</div>
 </body>
 </html>
