--- a/Home/View/Index/showDesign.html
+++ b/Home/View/Index/showDesign.html
@@ -62,16 +62,14 @@
 			/*padding-top: 2px;*/
 		}
 		.morecata div{
-			width: 610px;
+			width: 910px;
 			height: 50px;
 			background: white;
 		}
 		.morecata div a{
 			display: inline-block;
 			line-height: 50px;
-			width: 150px;
-		}
-		.morecata div a{
+			width: 130px;
 			font-size: 14px;
 			color:  #000;
 			opacity: 0.6;
@@ -182,19 +180,61 @@
  	<!-- 包含三个部分，左边的二级导航，中间最热商品轮播图，右边设计师的rank榜 -->
  	<div class="firstfloor">
 		<div class="subnav" id="subnav">
-			<li><a href="">上衣</a></li>
-			<li><a href="">裤子</a></li>
-			<li><a href="">裙子</a></li>
-			<li><a href="">鞋子</a></li>
-			<li><a href="">套装</a></li>
-			<li><a href="">查看更多分类</a></li>
+			<li><a href="{$smarty.const.__MODULE__}/Common/designs?id=1">上衣</a></li>
+			<li><a href="{$smarty.const.__MODULE__}/Common/designs?id=1">裤子</a></li>
+			<li><a href="{$smarty.const.__MODULE__}/Common/designs?id=1">裙子</a></li>
+			<li><a href="{$smarty.const.__MODULE__}/Common/designs?id=1">鞋子</a></li>
+			<li><a href="{$smarty.const.__MODULE__}/Common/designs?id=1">套装</a></li>
+			<li><a href="{$smarty.const.__MODULE__}/Common/designs?id=1">查看更多分类</a></li>
 			<div class="morecata" id="morecata">
-				<div><a href="">衬衫</a><a href="">T恤</a><a href="">外套</a><a href="">打底衫</a></div>
-				<div><a href="">牛仔</a><a href="">休闲裤</a><a href="">短裤</a><a href="">7分裤</a></div>
-				<div><a href="">连衣裙</a><a href="">半身裙</a><a href="">百褶裙</a><a href="">超短裙</a></div>
-				<div><a href="">跑鞋</a><a href="">马克鞋</a><a href="">休闲鞋</a><a href="">皮鞋</a></div>
-				<div><a href="">西装</a><a href="">休闲装</a><a href="">运动装</a><a href="">田园装</a></div>
-				<div><a href="">花样少年</a><a href="">花样少年</a><a href="">花样少年</a><a href="">花样少年</a></div>
+				<div>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">衬衫</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">T恤</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">外套</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">打底衫</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">打底衫</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">打底衫</a>
+				</div>
+				<div>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">牛仔</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">休闲裤</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">短裤</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">7分裤</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">7分裤</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">7分裤</a>
+				</div>
+				<div>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">连衣裙</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">半身裙</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">百褶裙</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">超短裙</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">超短裙</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">超短裙</a>
+				</div>
+				<div>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">跑鞋</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">马克鞋</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">休闲鞋</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">皮鞋</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">皮鞋</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">皮鞋</a>
+				</div>
+				<div>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">西装</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">休闲装</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">运动装</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">田园装</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">田园装</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">田园装</a>
+				</div>
+				<div>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">花样少年</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">花样少年</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">花样少年</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">花样少年</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">花样少年</a>
+					<a href="{$smarty.const.__MODULE__}/Common/designs?id=1">花样少年</a>
+				</div>
 		    </div>
 		</div>
 		<div class="hotshow">
