--- a/Home/View/User/accountCenter.html
+++ b/Home/View/User/accountCenter.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style type="text/css"></style>
+	<style type="text/css">
+		.activities{
+			display: none;
+		}
+		.wrapper{
+			background: #fff;
+			border: 0px;
+			box-shadow: 0px 0px 0px rgba(204, 204, 204, 0.35);
+		}
+		.wrapper .nav{
+			background: #fff;
+			border: 0px;
+		}
+		.wrapper .nav .tag_list{
+			background: #fff;
+			border: 0px;
+		}
+	</style>
 </head>
 <body>
 <div class="main"></div>
