--- a/Home/View/User/myDesign.html
+++ b/Home/View/User/myDesign.html
@@ -41,6 +41,23 @@
 			height: 330px;
 			border: 1px solid rgba(204, 204, 204, 0.7);
 		} 
+
+		.activities{
+			display: none;
+		}
+		.wrapper{
+			background: #fff;
+			border: 0px;
+			box-shadow: 0px 0px 0px rgba(204, 204, 204, 0.35);
+		}
+		.wrapper .nav{
+			background: #fff;
+			border: 0px;
+		}
+		.wrapper .nav .tag_list{
+			background: #fff;
+			border: 0px;
+		}
 	</style>
 </head>
 <body>
