--- a/Home/View/User/uploadDesign.html
+++ b/Home/View/User/uploadDesign.html
@@ -20,6 +20,22 @@
 			opacity: 0.5;
 		}*/
 		
+		.activities{
+			display: none;
+		}
+		.wrapper{
+			background: #fff;
+			border: 0px;
+			box-shadow: 0px 0px 0px rgba(204, 204, 204, 0.35);
+		}
+		.wrapper .nav{
+			background: #fff;
+			border: 0px;
+		}
+		.wrapper .nav .tag_list{
+			background: #fff;
+			border: 0px;
+		}
 	</style>
 </head>
 <body>
